# tidymon

./: config.yaml  monitor.py  notifier.py  pyproject.toml  rules.py  setup_scheduler.py  tray.py
